updated to hand dependency error

--- a/Segregated/test_cell.ipynb
+++ b/Segregated/test_cell.ipynb
@@ -2,86 +2,68 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "wj5V_SKWdn8R"
+      },
       "source": [
         "# Run cells from AllenDB"
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip uninstall -y numpy pandas scipy> /dev/null 2>&1\n",
+        "!pip install --no-cache-dir numpy==1.24.4 pandas==2.2.2 scipy==1.11.3 > /dev/null 2>&1"
+      ],
+      "metadata": {
+        "id": "CcQJ9SLPdozc"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "os._exit(0)"
+      ],
+      "metadata": {
+        "id": "fH74LxYDe7yp"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ni3ndt_-kYPm",
-        "outputId": "a2789eee-b162-49c8-e065-78d28943ed03"
+        "outputId": "c486bfac-468f-470e-cecd-6f42be36af70"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Requirement already satisfied: pip in /usr/local/lib/python3.11/dist-packages (24.1.2)\n",
-            "Collecting pip\n",
-            "  Downloading pip-25.0.1-py3-none-any.whl.metadata (3.7 kB)\n",
-            "Downloading pip-25.0.1-py3-none-any.whl (1.8 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m16.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pip\n",
-            "  Attempting uninstall: pip\n",
-            "    Found existing installation: pip 24.1.2\n",
-            "    Uninstalling pip-24.1.2:\n",
-            "      Successfully uninstalled pip-24.1.2\n",
-            "Successfully installed pip-25.0.1\n",
-            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
-            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
-            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.0/12.0 MB\u001b[0m \u001b[31m120.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.2/15.2 MB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.1/17.1 MB\u001b[0m \u001b[31m122.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.1/34.1 MB\u001b[0m \u001b[31m55.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m973.1/973.1 kB\u001b[0m \u001b[31m42.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.7/2.7 MB\u001b[0m \u001b[31m37.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m93.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.9/14.9 MB\u001b[0m \u001b[31m129.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m52.3/52.3 MB\u001b[0m \u001b[31m51.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.4/4.4 MB\u001b[0m \u001b[31m5.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.4/13.4 MB\u001b[0m \u001b[31m141.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m739.1/739.1 kB\u001b[0m \u001b[31m30.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Building wheel for argschema (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "google-colab 1.0.0 requires pandas==2.2.2, but you have pandas 1.5.3 which is incompatible.\n",
-            "imbalanced-learn 0.13.0 requires numpy<3,>=1.24.3, but you have numpy 1.23.5 which is incompatible.\n",
-            "plotnine 0.14.5 requires pandas>=2.2.0, but you have pandas 1.5.3 which is incompatible.\n",
-            "bigframes 1.36.0 requires numpy>=1.24.0, but you have numpy 1.23.5 which is incompatible.\n",
-            "pymc 5.20.1 requires numpy>=1.25.0, but you have numpy 1.23.5 which is incompatible.\n",
-            "numba 0.61.0 requires numpy<2.2,>=1.24, but you have numpy 1.23.5 which is incompatible.\n",
-            "albumentations 2.0.4 requires numpy>=1.24.4, but you have numpy 1.23.5 which is incompatible.\n",
-            "tensorflow 2.18.0 requires numpy<2.1.0,>=1.26.0, but you have numpy 1.23.5 which is incompatible.\n",
-            "jax 0.4.33 requires numpy>=1.24, but you have numpy 1.23.5 which is incompatible.\n",
-            "mizani 0.13.1 requires pandas>=2.2.0, but you have pandas 1.5.3 which is incompatible.\n",
-            "chex 0.1.88 requires numpy>=1.24.1, but you have numpy 1.23.5 which is incompatible.\n",
-            "albucore 0.0.23 requires numpy>=1.24.4, but you have numpy 1.23.5 which is incompatible.\n",
-            "treescope 0.1.8 requires numpy>=1.25.2, but you have numpy 1.23.5 which is incompatible.\n",
-            "jaxlib 0.4.33 requires numpy>=1.24, but you have numpy 1.23.5 which is incompatible.\n",
-            "cudf-cu12 24.12.0 requires pandas<2.2.4dev0,>=2.0, but you have pandas 1.5.3 which is incompatible.\n",
-            "langchain 0.3.18 requires numpy<2,>=1.26.4; python_version < \"3.12\", but you have numpy 1.23.5 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement pip2 (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for pip2\u001b[0m\u001b[31m\n",
+            "\u001b[0mfatal: destination path 'ACT' already exists and is not an empty directory.\n"
           ]
         }
       ],
       "source": [
         "# If running in Colab\n",
-        "!pip install --upgrade pip\n",
-        "!pip install --quiet allensdk neuron\n",
-        "!git clone -b release_candidate https://github.com/V-Marco/ACT.git"
+        "!pip install --upgrade pip2 >&1\n",
+        "!pip install --quiet allensdk neuron 2>&1\n",
+        "!git clone -b release_candidate https://github.com/V-Marco/ACT.git 2>&1"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "Fg6QlbRJvcha"
       },
@@ -101,13 +83,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ohqoZc7OotdZ",
-        "outputId": "00dba5d4-ead8-4e1e-86e2-74ecec7d8372"
+        "id": "ohqoZc7OotdZ"
       },
       "outputs": [],
       "source": [
@@ -117,22 +95,28 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "y2VH-bGEdn8T"
+      },
       "source": [
         "## Build the cell"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "pGmLIqlFdn8T"
+      },
       "source": [
         "**NOTE:** Control the soma area in the `build_cell` function below."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "c_uh5-8Jdn8U"
+      },
       "outputs": [],
       "source": [
         "def build_cell():\n",
@@ -172,15 +156,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "wzSOcCqrdn8U"
+      },
       "source": [
         "## Morphology"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 301,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "ur8bPpkFdn8U",
+        "outputId": "969ea967-7b2d-4930-bc67-7f2b6cd2552b"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -224,8 +213,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 302,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "sYOH3Zt3dn8U",
+        "outputId": "2777d9ea-c2db-4841-eeec-4d9f71d4687a"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -245,15 +237,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "XMdDg3asdn8U"
+      },
       "source": [
         "## Passive properties"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 289,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "E4dV0tZ1dn8V",
+        "outputId": "112f44e8-54d1-424e-c211-33a54a5c0552"
+      },
       "outputs": [
         {
           "data": {
@@ -278,8 +275,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 290,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "slxNOcNRdn8V",
+        "outputId": "d66499cc-41f3-4111-ffc9-64806ccac0de"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -347,8 +347,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 291,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "LghqBV23dn8V",
+        "outputId": "6b31577c-0b52-47e9-a092-9deaac5b9f51"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -366,15 +369,19 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "bXj_B2M4dn8V"
+      },
       "source": [
         "## FI-Curve"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 282,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "dLc-klLQdn8V"
+      },
       "outputs": [],
       "source": [
         "def count_voltage_events(t, v):\n",
@@ -406,8 +413,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 286,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "fx2SSTC5dn8W",
+        "outputId": "84384126-31df-4b90-9455-c01089e83a21"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -691,8 +701,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 287,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "NgMVPPg3dn8W",
+        "outputId": "52700eb4-c05d-4f07-b468-14e2326d6d35"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -718,7 +731,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "6Ur37iRedn8W",
+        "outputId": "6b91ba60-362f-486c-f5de-52c9629d16a8"
+      },
       "outputs": [
         {
           "data": {
@@ -749,8 +765,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 266,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "ag8Zvf7Ldn8W",
+        "outputId": "6df9dbbb-f4a1-4f6a-badf-eb1161441abd"
+      },
       "outputs": [
         {
           "data": {
@@ -780,7 +799,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "gEkbJqxXdn8W"
+      },
       "outputs": [],
       "source": []
     }
