added hoc capability and download cell

--- a/Segregated/test_cell.ipynb
+++ b/Segregated/test_cell.ipynb
@@ -26,7 +26,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "after the above cell has restarted the session, run all below"
+        "#after the above cell has restarted the session, run all below"
       ],
       "metadata": {
         "id": "beVEtCuIRejo"
@@ -137,11 +137,11 @@
         "models"
       ],
       "metadata": {
-        "id": "70jAoqLNPSXw",
-        "outputId": "1f8f62e0-5cf9-4a18-b676-29f4a68ce286",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "70jAoqLNPSXw",
+        "outputId": "bc305a22-d6a8-4f15-841b-5c97f95c8cab"
       },
       "execution_count": 6,
       "outputs": [
@@ -184,11 +184,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "QpHxmwLOMwld",
-        "outputId": "e244887a-79c0-4b6b-fbb4-c454ec269cfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QpHxmwLOMwld",
+        "outputId": "da162bfd-5f7f-43a8-fbe5-a80e9a77479c"
       },
       "execution_count": 7,
       "outputs": [
@@ -196,43 +196,43 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "2025-05-02 00:51:34,625 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/657210401\n",
+            "2025-05-02 01:40:09,223 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/657210401\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/657210401\n",
-            "2025-05-02 00:51:35,899 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/657210404\n",
+            "2025-05-02 01:40:09,531 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/657210404\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/657210404\n",
-            "2025-05-02 00:51:36,352 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337293\n",
+            "2025-05-02 01:40:09,666 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337293\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337293\n",
-            "2025-05-02 00:51:36,708 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337054\n",
+            "2025-05-02 01:40:09,826 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337054\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337054\n",
-            "2025-05-02 00:51:37,057 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337225\n",
+            "2025-05-02 01:40:09,950 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337225\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337225\n",
-            "2025-05-02 00:51:37,404 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337019\n",
+            "2025-05-02 01:40:10,060 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337019\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337019\n",
-            "2025-05-02 00:51:37,840 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337003\n",
+            "2025-05-02 01:40:10,175 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337003\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337003\n",
-            "2025-05-02 00:51:38,187 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337050\n",
+            "2025-05-02 01:40:10,306 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337050\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337050\n",
-            "2025-05-02 00:51:38,575 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337042\n",
+            "2025-05-02 01:40:10,410 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337042\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337042\n",
-            "2025-05-02 00:51:38,903 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337011\n",
+            "2025-05-02 01:40:10,513 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337011\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337011\n",
-            "2025-05-02 00:51:39,275 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337046\n",
+            "2025-05-02 01:40:10,601 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337046\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337046\n",
-            "2025-05-02 00:51:39,711 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337015\n",
+            "2025-05-02 01:40:10,735 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337015\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337015\n",
-            "2025-05-02 00:51:40,037 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337066\n",
+            "2025-05-02 01:40:10,869 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337066\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337066\n",
-            "2025-05-02 00:51:40,508 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/464138096\n",
+            "2025-05-02 01:40:11,025 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/464138096\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/464138096\n",
-            "2025-05-02 00:51:40,942 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337007\n",
+            "2025-05-02 01:40:11,140 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337007\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337007\n",
-            "2025-05-02 00:51:41,271 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337062\n",
+            "2025-05-02 01:40:11,262 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337062\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337062\n",
-            "2025-05-02 00:51:41,626 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/491113425\n",
+            "2025-05-02 01:40:11,433 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/491113425\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/491113425\n",
-            "2025-05-02 00:51:41,954 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337070\n",
+            "2025-05-02 01:40:11,572 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337070\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/395337070\n",
-            "2025-05-02 00:51:42,279 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/497236694\n",
+            "2025-05-02 01:40:11,692 allensdk.api.api.retrieve_file_over_http INFO     Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/497236694\n",
             "INFO:allensdk.api.api.retrieve_file_over_http:Downloading URL: http://api.brain-map.org/api/v2/well_known_file_download/497236694\n"
           ]
         }
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 9,
       "metadata": {
         "id": "c_uh5-8Jdn8U"
       },
@@ -347,7 +347,7 @@
       "metadata": {
         "id": "y4mGz8rlXinq"
       },
-      "execution_count": 47,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -371,7 +371,7 @@
         "collapsed": true,
         "id": "VON8LdWXQzMx"
       },
-      "execution_count": 71,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -382,13 +382,13 @@
         "print(f\"Soma L: {hobject.soma[0].L}\")"
       ],
       "metadata": {
-        "id": "rUgKdauIQ_VL",
-        "outputId": "2f771128-c644-4d79-8062-22bde498e4c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rUgKdauIQ_VL",
+        "outputId": "5443b139-3376-4e52-8efb-e60b81d2d7fe"
       },
-      "execution_count": 72,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,11 +423,11 @@
         "print(spps)"
       ],
       "metadata": {
-        "id": "uGyQD1ijSYvf",
-        "outputId": "764f85c1-f014-4332-a0d7-1c832e6dcd5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uGyQD1ijSYvf",
+        "outputId": "e6956fa9-9c0c-4d7a-9a44-fcad64633cc2"
       },
       "execution_count": 13,
       "outputs": [
@@ -439,6 +439,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "programmatically change the json"
+      ],
+      "metadata": {
+        "id": "UFTjqR9utamA"
+      }
     },
     {
       "cell_type": "code",
@@ -481,10 +490,40 @@
         "            'g_pas':spps.g_bar_leak,\n",
         "            'cm': spps.Cm,\n",
         "            'e_pas':spps.e_rev_leak\n",
-        "            }\n",
-        "\n",
+        "            }\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s9qpHN6zT4Ne",
+        "outputId": "b799e47b-6bd6-4f08-8ac4-64ac8ce5c67c"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "476686112_fit.json\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "choose the spp numbers or the original"
+      ],
+      "metadata": {
+        "id": "k-UZbQ75ti2i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "###############################\n",
-        "chosen_fit = original_fit\n",
+        "chosen_fit = new_fit\n",
         "#################################\n",
         "for item in data['passive'][0]['cm']:\n",
         "  item['cm'] = chosen_fit['cm']\n",
@@ -501,31 +540,18 @@
         "    item['value'] = chosen_fit['cm']\n",
         "\n",
         "with open(config_filename, 'w') as file:\n",
-        "    json.dump(data, file, indent=4)\n",
-        "\n"
+        "    json.dump(data, file, indent=4)"
       ],
       "metadata": {
-        "id": "s9qpHN6zT4Ne",
-        "outputId": "3eaa7663-51cb-47df-c0c9-1592ad9027c8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "viIIw23EtQOm"
       },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "476686112_fit.json\n"
-          ]
-        }
-      ]
+      "execution_count": 23,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#rebuild the cell"
+        "#run the simulation"
       ],
       "metadata": {
         "id": "t8v1LD7tiyRV"
@@ -538,7 +564,7 @@
         "\n",
         "using_hoc = False\n",
         "soma_diam_multiplier = 1\n",
-        "hobject = build_cell(soma_diam_multiplier,using_hoc)\n",
+        "hobject = build_cell(soma_diam_multiplier,using_hoc)#rebuild the cell to make sure the set_simulation() is using the correct hobj\n",
         "\n",
         "\n",
         "h, stim = set_simulation(hobject,sim_params)\n",
@@ -551,14 +577,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "OzknfkcOWJ8r",
-        "outputId": "00341e1d-2ed7-407f-9b0f-881479fd9e9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        }
+        },
+        "id": "OzknfkcOWJ8r",
+        "outputId": "43ba3e6e-c0ab-4301-94bd-77ff4a02724d"
       },
-      "execution_count": 74,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -574,10 +600,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 25,
       "metadata": {
         "id": "LghqBV23dn8V",
-        "outputId": "a7ab6d51-be00-4af9-bf1c-8168c7aa9e3c",
+        "outputId": "6bfeb71b-4c31-44f2-b685-1f2194c04df1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -608,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 26,
       "metadata": {
         "id": "dLc-klLQdn8V"
       },
@@ -643,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 27,
       "metadata": {
         "id": "fx2SSTC5dn8W"
       },
@@ -674,13 +700,13 @@
         "  print(\"No spikes\")"
       ],
       "metadata": {
-        "id": "YNnA-8q5jiBb",
-        "outputId": "6bc4edde-19fb-47c5-c4c2-99cc99f490eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YNnA-8q5jiBb",
+        "outputId": "783e5b4d-0282-410a-bc25-b90f95cb723f"
       },
-      "execution_count": 64,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,10 +719,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 29,
       "metadata": {
         "id": "NgMVPPg3dn8W",
-        "outputId": "df362a98-e8b4-479d-eee9-45ff39103511",
+        "outputId": "ba601df1-00ba-4924-fce0-b3ddd6f7259f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -725,10 +751,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 30,
       "metadata": {
         "id": "6Ur37iRedn8W",
-        "outputId": "aa2aa918-abd7-4bc9-d48e-9fe81b08cd13",
+        "outputId": "78a9b2d3-a1e7-471b-b565-0c9bce8f69cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 448
@@ -739,11 +765,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x79852ac73bd0>]"
+              "[<matplotlib.lines.Line2D at 0x7bcdffed3610>]"
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 30
         },
         {
           "output_type": "display_data",
