--- a/Segregated/test_cell.ipynb
+++ b/Segregated/test_cell.ipynb
@@ -123,6 +123,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Also if using hoc, double check parameters every time build_cell() is used"
+      ],
+      "metadata": {
+        "id": "zoN2RvxqW5yk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#get the model id\n",
@@ -637,14 +646,15 @@
       "source": [
         "#function to calculate the frequency of a voltage trace\n",
         "def get_frequency(v,sim_params):\n",
-        "  #display the frequency of a simulation\n",
-        "  start_idx,end_idx = get_start_end_idx(sim_params)\n",
         "\n",
+        "  start_idx,end_idx = get_start_end_idx(sim_params)\n",
         "  spikes = count_voltage_events(np.arange(len(v.as_numpy()))[start_idx:end_idx], v.as_numpy()[start_idx:end_idx])\n",
+        "\n",
         "  if spikes> 0:\n",
         "    duration_sec = sim_params['stim_dur'] / 1000.0\n",
         "    freq = spikes / duration_sec\n",
         "    return freq\n",
+        "\n",
         "  else:\n",
         "    return 0"
       ],
@@ -656,23 +666,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "7GXoM1eG0PPN"
-      },
-      "execution_count": 20,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "#modify simulation parameters if needed\n",
         "sim_params['stim_amp'] = -0.1\n",
         "\n",
         "#rebuild the cell to make sure the set_simulation() is using the correct hobj\n",
-        "\n",
         "#if using hoc call with the hoc filename and cell name\n",
-        "\n",
         "\n",
         "soma_diam_multiplier = 1\n",
         "hobject = build_cell(soma_diam_multiplier)\n",
@@ -744,6 +743,7 @@
       ],
       "source": [
         "#find Rin, tau, sag ratio, and Vrest\n",
+        "\n",
         "print(ACTPassiveModule.compute_gpp(v.as_numpy(), h.dt, sim_params['stim_delay'], h.tstop, sim_params['stim_amp']))\n",
         "print(f\"V-rest: {v.as_numpy()[sim_params['stim_dur']]}\")"
       ]
